--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
     <script src = "script.js"></script>
 </head>
 <body>
+
+    <div id = "NavBar">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#"><h2 id = "companySign">ZIPPY.</h2></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto" id = "navbarLinks">
+                    <a class="nav-item nav-link" href="#home">HOME<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#features">PRODUCTS</a>
+                    <a class="nav-item nav-link" href="#pricing">PRICING</a>
+                    <a class="nav-item nav-link" href="#team">TEAM</a>
+                    <a class="nav-item nav-link" href="#blog">BLOG</a>
+                    <a class="nav-item nav-link" href="#contact">CONTACT</a>
+                </div>
+            </div>
+        </nav>
+    </div>
     
     <div id = "home">
         <div class = "content">
