--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div id = "NavBar">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
             <a class="navbar-brand" href="#"><h2 id = "companySign">ZIPPY.</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
