Updating the links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class = "features">
+        <div id = "features">
             <div class = "row">
                 <div class = "col-12 col-md-4">
                     <i class = "fa fa-bell fa-3x"></i>
